compiler/tests/compiler/must_fail/t_07.mil.exp.err
Parsing tests/compiler/must_fail/t_07.mil as MIL

tests/compiler/must_fail/t_07.mil:1:23: 1:31 error: variable name missing
fn foo(x : stack u64, stack u64) {
                      ^^^^^^^^^
